stylesheet.css
@import url(http://fonts.googleapis.com/css?family=Roboto:300,500);


/*

|\/| _ |_ .| _
|  |(_)|_)||(-'

*/

@media screen and (max-aspect-ratio: 1/1) {
    #desktop-notice {
        display: none;
    }
    
    html {
        -webkit-tap-highlight-color: rgba(0,0,0,0);
    }
    
    body {
        padding: 0 0 0 0;
        margin: 0 0 0 0;
    }

    p {
        margin: 0;
    }

    div {
        line-height: 0;
    }
    
    #cover-mobile {
        display: block;
        width: 100%;
    }
    
    #cover-desktop {
        display: none;
    }
    
    #about {
        display: block;
        width: 100%;
        height: 135vw;
        background: linear-gradient(0deg, #DBDBDB, #ffffff)
    }
    
    #about-graphic {
        display: block;
        width: 90%;
        margin: 0 0 0 5%;
    }
    
    #intro {
        line-height: 1.62;
        width: 85%;
        margin: 7.5% 0 0 7.5%;
        font-family: Roboto, sans-serif;
        font-weight: 300;
        font-size: 3.8vw;
        text-align: center;
    }
    
    #dot-stop {
        width: 20%;
        margin: 4%;
    }
    
    #icons {
        margin: 7.5% 0 0 0;
        text-align: center;
    }
    
    #instagram {
        display: inline;
        width: 10%;
    }
    
    #facebook {
        display: inline;
        width: 9.25%;
        margin-bottom: 0.375vw;
        margin-left: 6.2vw;
        margin-right: 5.2vw;
    }
    
    #email {
        display: inline;
        width: 12%;
        margin-bottom: 1.5vw
    }
    
    #address {
        display: block;
        margin: 6.2vw;
        font-family: Roboto, sans-serif;
        font-weight: 500;
        font-size: 3.8vw;
    }
    
    #gallery {
        display: block;
        width: 100%;
    }
    
    #notice {
        display: block;
        height: 15vw;
    }
    
    #notice-message-mobile {
        position: relative;
        top: 55%;
        line-height: 1.62;
        font-family: Roboto, sans-serif;
        font-weight: 500;
        font-size: 3.8vw;
        text-align: center;
    }
    
    #notice-message-desktop {
        display: none;
    }
    
    .design {
        display: block;
        width: 100%;
        height: 100vw;
        -webkit-touch-callout: none;
        -webkit-user-select: none;
        -khtml-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;
    }
    
    .design-img {
        display: block;
        position: absolute;
        width: 100%;
        top: 0;
        user-drag: none; 
        user-select: none;
        -moz-user-select: none;
        -webkit-user-drag: none;
        -webkit-user-select: none;
        -ms-user-select: none;
    }
    
    .desktop-trigger {
        display: none;
    }
    
    .info {
        display: block;
        position: relative;
        width: 100%;
        height: 100%;
        background-color: #ffffff;
    }
    
    .title {
        position: relative;
        top: 4%;
        line-height: 1.62;
        font-family: Roboto, sans-serif;
        font-weight: 500;
        font-size: 8vw;
        width: 90%;
        margin: 0 0 0 5%;
    }
    
    .description {
        position: relative;
        top: 4%;
        line-height: 1.62;
        font-family: Roboto, sans-serif;
        font-weight: 300;
        font-size: 3.8vw;
        width: 90%;
        margin: 0 0 0 5%;
    }
    
    #copyright {
        display: block;
        width: 100%;
        height: 10vw;
        background-color: #ffffff;
    }

    #copyright p {
        position: relative;
        font-family: Roboto, sans-serif;
        font-weight: 300;
        font-size: 3.8vw;
        text-align: center;
        top: 50%;
        }
}


/*
 _
| \ _  _ |_ |_ _  _
|_/(-''-,|\ |_(_)|_)
                 |
*/

@media screen and (min-aspect-ratio: 1/1) {
    body {
        padding: 0 0 0 0;
        margin: 0 0 0 0;
        overflow-x: hidden;
    }

    p {
        margin: 0;
    }

    div {
        line-height: 0;
    }
    
    #cover-mobile {
        display: none;
    }
    
    #cover-desktop {
        display: block;
        position: relative;
        height: 100vh;
        left: 50%;
        transform: translate(-50%, 0);
    }

    #about {
        display: block;
        width: 100%;
        height: 700px;
        background: linear-gradient(0deg, #DBDBDB, #ffffff);
    }
    
    #about-graphic {
        display: block;
        position: relative;
        width: 640px;
        left: 50%;
        transform: translate(-50%, 0);
        margin: 48px 0 48px 0;
    }
    
    #intro {
        display: block;
        position: relative;
        left: 50%;
        transform: translate(-50%, 0);
        line-height: 1.62;
        width: 700px;
        margin: 0;
        font-family: Roboto, sans-serif;
        font-weight: 300;
        font-size: 1.23em;
        text-align: center;
    }
    
    #dot-stop {
        height: 1em;
        margin: 0.7em;
    }
    
    #icons {
        margin: 44px 0 0 0;
        text-align: center;
    }
    
    #instagram {
        display: inline;
        width: 50px;
    }
    
    #instagram:hover {
        opacity: 0.75;
    }
    
    #facebook {
        display: inline;
        width: 46.25px;
        margin-bottom: 2.5px;
        margin-left: 31px;
        margin-right: 27px;
    }
    
    #facebook:hover {
        opacity: 0.75;
    }
    
    #email {
        display: inline;
        width: 60px;
        margin-bottom: 7.5px;
    }
    
    #email:hover {
        opacity: 0.75;
    }
    
    #address {
        display: block;
        margin: 32px;
        font-family: Roboto, sans-serif;
        font-weight: 500;
        font-size: 1.23em;
    }
    
    #gallery {
        display: block;
        position: relative;
        max-width: 1200px;
        margin: auto;
        text-align: center;
    }

    #notice {
        width: 100%;
        height: 120px;
        margin: 0 0 -3% 0;
    }
    
    #notice-message-mobile {
        display: none;
    }
    
    #notice-message-desktop {
        position: relative;
        top: 30%;
        line-height: 1.62;
        font-family: Roboto, sans-serif;
        font-weight: 300;
        font-size: 1.48em;
        text-align: center;
    }
    
    .design {
        display: inline-block;
        width: 25%;
        height: 0;
        padding-bottom: 25%;
        margin: 3%;
        -webkit-touch-callout: none;
        -webkit-user-select: none;
        -khtml-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;
    }
    
    .design-img {
        display: block;
        position: relative;
        width: 100%;
        user-drag: none; 
        user-select: none;
        -moz-user-select: none;
        -webkit-user-drag: none;
        -webkit-user-select: none;
        -ms-user-select: none;
    }
    
    .desktop-trigger {
        display: block;
        position: absolute;
        top: 0;
        width: 100%;
        height: 0;
        padding-bottom: 100%;
    }
    
    .info {
        display: block;
        position: relative;
        width: 100%;
        height: 100%;
        background-color: #ffffff;
    }
    
    .text {
        display: none;
        position: fixed;
        top: 0;
        left: 0;
        width: 300px;
        height: 100%;
        background-color: rgba(255, 255, 255, 0.75);
        padding: 4.9vw 3vw 0 3vw;
        z-index: 2;
    }
    
    .title {
        position: relative;
        line-height: 1.62;
        font-family: Roboto, sans-serif;
        font-weight: 500;
        font-size: 1.48em;
        text-align: left;
    }
    
    .description {
        position: relative;
        line-height: 1.62;
        font-family: Roboto, sans-serif;
        font-weight: 300;
        font-size: 0.98em;
        text-align: left;
    }

    #copyright {
        display: block;
        width: 100%;
        height: 48px;
        background-color: #ffffff;
    }

    #copyright p {
        position: relative;
        font-family: Roboto, sans-serif;
        font-weight: 300;
        font-size: 1.23em;
        text-align: center;
        top: 50%;
        }
}

